fix: increase gap on right header, decrease gap  text and icon in search (refs SFKUI-8013)

--- a/src/style/_search.scss
+++ b/src/style/_search.scss
@@ -19,7 +19,7 @@ kbd {
     width: 100%;
     display: inline-flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.25rem;
     padding-inline-end: 0;
 }
 
